refactor: rewrite EmailNotificationAdapter per Brevo SDK spec
Uses direct env var binding (BREVO_API_KEY, KOSTONE_SYSTEM_EMAIL),
initialises ApiClient per-call, sends HTML content via Brevo REST API.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>